<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ScrollView
            android:id="@+id/sv_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".DetailActivity">

             <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation ="vertical">

                 <ImageView
                     android:id="@+id/iv_backdrop"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     android:scaleType="fitCenter"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:contentDescription="@string/content_description_backdrop" />


                 <ImageView
                     android:id="@+id/iv_movie_poster"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="3dp"
                     android:background="@color/colorPrimary"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_original_title"
                     android:paddingBottom="16dp"
                     android:contentDescription="@string/movie_poster" />


                 <TextView
                     android:id="@+id/tv_original_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/holo_blue_light"
                     android:contentDescription="@string/original_title"
                     android:gravity="center"
                     android:textColor="@android:color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
                     tools:text="Movie Title" />


                 <ImageButton
                     android:id="@+id/ib_favorite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/content_description_favorite_button"
                     android:foregroundGravity="center_vertical"
                     android:onClick="onToggleFavorite"
                     android:paddingEnd="@dimen/detail_padding"
                     android:paddingLeft="@dimen/detail_padding"
                     android:paddingRight="@dimen/detail_padding"
                     android:paddingStart="@dimen/detail_padding"
                     android:src="@android:drawable/btn_star"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_original_title" />


                 <TextView
                     android:id="@+id/tv_movie_overview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/detail_overview"
                     android:textColor="@android:color/black"
                     android:textSize="14sp"
                     android:textStyle="normal"
                     android:paddingLeft="@dimen/detail_padding"
                     android:paddingBottom="@dimen/detail_padding"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster" />


                 <TextView
                     android:id="@+id/tv_release_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="@dimen/detail_padding"
                     android:paddingEnd="8dp"
                     android:paddingStart="8dp"

                     app:layout_constraintLeft_toRightOf="@+id/iv_movie_poster"
                     app:layout_constraintTop_toBottomOf="@+id/tv_original_title"
                     tools:text="2017" />


                 <TextView
                     android:id="@+id/tv_movie_vote_average"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="@dimen/detail_padding"
                     android:paddingStart="32dp"
                     app:layout_constraintBaseline_toBaselineOf="@+id/tv_release_date"
                     app:layout_constraintLeft_toRightOf="@+id/tv_release_date"
                     tools:text="9.1 / 10" />

                 <TextView
                     android:id="@+id/tv_reviews_content_label"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:text="@string/reviews"
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     android:paddingTop="@dimen/detail_padding"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_trailers_list"
                     tools:layout_marginTop="16dp" />


                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_trailers_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/detail_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_reviews_content_label"/>

                 <TextView
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="/ 10"
                     app:layout_constraintLeft_toRightOf="@+id/tv_movie_vote_average"
                     app:layout_constraintBaseline_toBaselineOf="@id/tv_movie_vote_average"
                    />

             </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv_detail_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="22sp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/pb_detail_loading_indicator"
            android:layout_height="42dp"
            android:layout_width="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

</FrameLayout>
</layout>